--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
 
 development:
   <<: *default
@@ -14,5 +17,3 @@ test:
 production:
   <<: *default
   database: kreskanta_mono_production
-  username: <%= ENV["DATABASE_USERNAME"] %>
-  password: <%= ENV["DATABASE_PASSWORD"] %>
