--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 require:
   - rubocop-rails
+  - rubocop-rspec
 
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 3.1.0
   Exclude:
     - 'bin/**/*'
