--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,9 +9,16 @@ AllCops:
     - 'bin/**/*'
     - 'db/**/*'
     - 'config/**/*'
+    - 'spec/support/mocks/**/*'
 
 Style/HashSyntax:
   EnforcedStyle: ruby19_no_mixed_keys
 
 Style/Documentation:
   Enabled: false
+
+Metrics/BlockLength:
+  IgnoredMethods:
+    - describe
+  Exclude:
+    - 'spec/support/mocks/**/*'
