fixes to please RuboCop, including around specs and mocks

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,3 +22,9 @@ Metrics/BlockLength:
     - describe
   Exclude:
     - 'spec/support/mocks/**/*'
+
+RSpec/ExampleLength:
+  Max: 10
+
+RSpec/MultipleExpectations:
+  Max: 5
