fix RSpec workflow

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -36,4 +36,5 @@ jobs:
           RAILS_ENV: test
           PGHOST: localhost
           PGUSER: postgres
+          RAILS_MASTER_KEY: 2df7c389ef1d34a0703bea91c8096d55
         run: bundle exec rspec
