--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       DATABASE_HOST: db
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
+      RAILS_MASTER_KEY: 2df7c389ef1d34a0703bea91c8096d55
     volumes:
       - .:/app
     ports:
