implement header links

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -37,4 +37,5 @@ jobs:
           PGHOST: localhost
           PGUSER: postgres
           RAILS_MASTER_KEY: 2df7c389ef1d34a0703bea91c8096d55
+          BINANCE_TLD: US
         run: bundle exec rspec
