--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,3 +32,8 @@ RSpec/ExampleLength:
 
 RSpec/MultipleExpectations:
   Max: 5
+
+RSpec/DescribeClass:
+  Exclude:
+    - 'spec/features/**/*'
+    - 'spec/lib/tasks/**/*'
